# R-Type

./: .gitignore  404.html  CMakeLists.txt  README.md  dependencies.txt  index.html  mkdocs.yml
client/: CMakeLists.txt  Clock.cpp  Clock.hpp  ComponentFactory.cpp  ComponentFactory.hpp  Inputer.cpp  Inputer.hpp  Network.cpp  Network.hpp  Parsing.cpp  Parsing.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SpriteManager.hpp  Systems.cpp  Systems.hpp  main.cpp
client/PrefabsEngine/: PrefabGenerator.cpp  PrefabGenerator.hpp
client/addons/CollisionWaveSpawn/: index.html
client/addons/EnemyInfiniteSpawn/: index.html
client/addons/EnemyWaveSpawn/: index.html
client/addons/IsClicked/: index.html
client/addons/IsHover/: index.html
client/addons/OnHoverSprite/: index.html
client/addons/Parallax/: index.html
client/addons/ShipAnimation/: index.html
client/addons/SpriteAnimation/: index.html
client/architecture/: index.html
client/components/IsClicked/: index.html
client/components/IsHover/: index.html
client/components/MousePosition/: index.html
client/components/NumberLevels/: index.html
client/components/NumberPlayers/: index.html
client/components/OnHoverSprite/: index.html
client/components/RendererTexture/: index.html
client/components/SendPacket/: index.html
client/components/SoundComponent/: index.html
client/enemies/: index.html
client/engine/: ECS.cpp  Registry.cpp  SparseArray.cpp
client/include/GameEngine/: ECS.hpp
client/include/components/: Components.hpp
client/include/rngine/: Clock.hpp  Core.hpp  Entity.hpp  Keys.hpp  Mouse.hpp  Registry.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  SparseArray.hpp  SystemBundle.hpp
client/include/rngine/components/: Attackable.cpp  Attackable.hpp  Clickable.hpp  Collider.cpp  Collider.hpp  EnemyShoot.cpp  EnemyShoot.hpp  InfiniteScroll.hpp  Lootable.hpp  MakeDamage.cpp  MakeDamage.hpp  Movable.cpp  Movable.hpp  Networked.hpp  PlayerId.hpp  Position.cpp  Position.hpp  SelfDestroy.cpp  SelfDestroy.hpp  Shoot.cpp  Shoot.hpp  Size.cpp  Size.hpp  Sprite.cpp  Sprite.hpp  Velocity.hpp  healthBar.hpp  text.hpp
client/include/rngine/types/: Entity.hpp  SystemBundle.hpp
client/include/rules/scenes/: Game.hpp  Lobby.hpp  Menu.hpp  MultiplayerGame.hpp
client/include/rules/systems/: Click.hpp  Engine.hpp  Physics.hpp  Shoots.hpp
client/main/: index.html
client/netWorker/: index.html
client/player/: index.html
client/renderer/: index.html
client/rngine/: Registry.cpp
client/rules/scenes/: Game.cpp  Lobby.cpp  Menu.cpp  MultiplayerGame.cpp
client/rules/systems/: Click.cpp  Engine.cpp  Physics.cpp  Shoots.cpp
client/scene/gameScene/: index.html
client/scene/lobbyScene/: index.html
client/scene/menuScene/: index.html
client/setMousePosition/: index.html
client/soundRenderer/: index.html
client/systems/CheckDamage/: index.html
client/systems/CheckHealth/: index.html
client/systems/CheckInvulnerability/: index.html
client/systems/CheckSolidCollider/: index.html
client/textRenderer/: index.html
server/: CMakeLists.txt  main.cpp
server/Game/: Game.cpp  Game.hpp
server/Network/: Network.cpp  Network.hpp
server/Paquet/: Paquet.cpp  Paquet.hpp
server/rfc/: index.html
src/client/: CMakeLists.txt  Networker.cpp  Renderer.cpp  SetMousePosition.cpp  SoundRenderer.cpp  TextRenderer.cpp  main.cpp
src/client/addons/: CollisionWaveSpawn.cpp  EnemyInfiniteSpawn.cpp  EnemyWaveSpawn.cpp  IsClicked.cpp  IsHover.cpp  OnHoverSprite.cpp  Parallax.cpp  ShipAnimation.cpp  SpriteAnimation.cpp
src/client/components/: IsClicked.cpp  IsHover.cpp  OnHoverSprite.cpp
src/client/include/: Networker.hpp  Renderer.hpp  SetMousePosition.hpp  SoundRenderer.hpp  TextRenderer.hpp
src/client/include/addons/: CollisionWaveSpawn.hpp  EnemyInfiniteSpawn.hpp  IsClicked.hpp  IsHover.hpp  OnHoverSprite.hpp  ShipAnimation.hpp  SpriteAnimation.hpp
src/client/include/components/: IsClicked.hpp  IsHover.hpp  MousePosition.hpp  NumberLevels.hpp  NumberPlayers.hpp  OnHoverSprite.hpp  Parallax.hpp  RenderTexture.hpp  SendPacket.hpp  SoundComponent.hpp
src/client/include/scenes/: Game.hpp  GameOver.hpp  Home.hpp  Level1.hpp  Level2.hpp  Level3.hpp  Level4.hpp  Level5.hpp  Level6.hpp  Level7.hpp  Level8.hpp  LevelSelect.hpp  Lobby.hpp  Victory.hpp
src/client/include/systems/: CheckDamage.hpp  CheckHealth.hpp  CheckInvulnerability.hpp  CheckSolidCollider.hpp
src/client/scenes/: Game.cpp  GameOver.cpp  Home.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp  Level7.cpp  Level8.cpp  LevelSelect.cpp  Lobby.cpp  Victory.cpp
src/client/systems/: CheckDamage.cpp  CheckHealth.cpp  CheckInvulnerability.cpp  CheckSolidCollider.cpp
src/engine/: CMakeLists.txt  Core.cpp  Scene.cpp
src/engine/addons/: Acceleration.cpp  Collider.cpp  EnemyShoot.cpp  Limits.cpp  Velocity.cpp  destroyLimit.cpp
src/engine/include/RNGine/: Core.hpp  RNGine.hpp  Scene.hpp  SparseArray.hpp
src/engine/include/RNGine/addons/: Acceleration.hpp  Collider.hpp  Limits.hpp  Velocity.hpp  destroyLimit.hpp
src/engine/include/RNGine/components/: Attackable.hpp  Damages.hpp  Hitbox.hpp  Score.hpp  (+2 more)
src/fake-client/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Core.cpp
src/game/addons/: CollisionFactory.cpp  CollisionWaveSpawn.cpp  CreateShips.cpp  EnemyFactory.cpp  EnemyFactoryString.cpp  EnemyInfiniteSpawn.cpp  EnemyShoot.cpp  EnemyWaveSpawn.cpp  IsLoot.cpp  PatternMovement.cpp  PatternShoot.cpp  ShipController.cpp  ShipFactory.cpp  WinCondition.cpp
src/game/include/Rtype/: Core.hpp  Rtype.hpp
src/game/systems/: CheckDamage.cpp  CheckHealth.cpp  CheckInvulnerability.cpp  CheckSolidCollider.cpp
src/server/: CMakeLists.txt  Server.cpp  main.cpp
src/server/include/: Server.hpp
src/server/include/scenes/: Game.hpp  Level1.hpp  Level2.hpp  Level3.hpp  Level4.hpp  Level5.hpp  Level6.hpp  Level7.hpp  Level8.hpp
src/server/scenes/: Game.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp  Level7.cpp  Level8.cpp
(+110 files in other folders)
